--- a/src/index.css
+++ b/src/index.css
@@ -4,28 +4,7 @@
   box-sizing: border-box;
 }
 
-header {
-  width: 100%;
-  height: 70vh;
-}
-
-.container-nav {
-  display: flex;
-  height: 3.5rem;
-  background-color: rgb(40, 83, 102);
-  justify-content: center;
-  align-items: center;
-}
-
-nav a {
+/* body {
+  background-color: #202020;
   color: #fff;
-  text-decoration: none;
-  margin-right: 30px;
-  font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-}
-
-nav a:hover {
-  color: #aaa;
-  border-bottom: 1px solid #aaa;
-}
+} */
